--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -5457,4 +5457,661 @@ h1, h2, h3, h4, h5, h6 {
       -o-border-radius: 20px; }
   
   /*----------------------------------------*/
-  
+  /*  13. blog
+/*----------------------------------------*/
+.blog__item {
+  position: relative;
+  z-index: 2;
+  padding: 20px;
+  background-color: #1D1D3E;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px; }
+  .blog__item .thumb {
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px;
+    overflow: hidden;
+    display: inline-block; }
+    .blog__item .thumb img {
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s;
+      mix-blend-mode: luminosity; }
+  .blog__item .title {
+    font-size: 32px;
+    line-height: 42px;
+    margin-bottom: 18px; }
+    @media (max-width: 767px) {
+      .blog__item .title {
+        font-size: 22px;
+        line-height: 34px; } }
+    .blog__item .title a {
+      color: var(--color-white); }
+  .blog__item p {
+    margin-bottom: 38px; }
+  .blog__item .thm-btn {
+    padding: 14px 38px; }
+  .blog__item:hover .thumb img {
+    -webkit-transform: scale(1.05);
+    -ms-transform: scale(1.05);
+    transform: scale(1.05); }
+.blog__meta li {
+  color: #B3B3C0;
+  margin-bottom: 10px; }
+  .blog__meta li:not(:last-child) {
+    margin-right: 45px; }
+    @media (max-width: 767px) {
+      .blog__meta li:not(:last-child) {
+        margin-right: 20px; } }
+  .blog__meta li a {
+    color: inherit; }
+  .blog__meta li i {
+    color: var(--color-white);
+    margin-right: 6px;
+    font-size: 14px; }
+.blog__inner {
+  padding: 40px;
+  padding-top: 35px; }
+  @media (max-width: 767px) {
+    .blog__inner {
+      padding: 20px 0; } }
+.blog__shape .shape {
+  position: absolute;
+  z-index: -1; }
+  .blog__shape .shape--1 {
+    top: 1%;
+    right: 0; }
+  .blog__shape .shape--2 {
+    top: 13%;
+    left: 0; }
+  .blog__shape .shape--3 {
+    top: 27%;
+    right: 0; }
+  .blog__shape .shape--4 {
+    top: 36%;
+    right: 0; }
+  .blog__shape .shape--5 {
+    top: 47%;
+    left: 0; }
+
+.widget {
+  padding: 50px 40px;
+  background-color: #1D1D3E;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  z-index: 2;
+  position: relative; }
+  .widget__title {
+    font-size: 24px;
+    font-weight: 600;
+    margin-bottom: 30px; }
+  .widget__search {
+    position: relative; }
+    .widget__search input {
+      background-color: #0B0B29;
+      height: 60px;
+      border-radius: 5px;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      -o-border-radius: 5px;
+      font-size: 18px; }
+      .widget__search input::-webkit-input-placeholder {
+        color: #92939E;
+        opacity: 1; }
+      .widget__search input::-moz-placeholder {
+        color: #92939E;
+        opacity: 1; }
+      .widget__search input:-ms-input-placeholder {
+        color: #92939E;
+        opacity: 1; }
+      .widget__search input:-moz-placeholder {
+        color: #92939E;
+        opacity: 1; }
+    .widget__search button {
+      position: absolute;
+      top: 50%;
+      right: 20px;
+      color: #92939E;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      background-color: transparent;
+      font-size: 17px; }
+  .widget__category li:not(:last-child) {
+    margin-bottom: 27px; }
+  .widget__category li a {
+    font-size: 18px;
+    color: #B3B3C0;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    font-weight: 500; }
+    .widget__category li a:hover {
+      color: var(--color-white); }
+  .widget__post-item:not(:last-child) {
+    margin-bottom: 30px; }
+  .widget__post-item .post-thumb {
+    width: 80px;
+    height: 80px;
+    margin-right: 20px;
+    border-radius: 5px;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    -o-border-radius: 5px;
+    overflow: hidden; }
+  .widget__post-item .post-content {
+    width: calc(100% - 100px); }
+  .widget__post-item .post-date {
+    font-size: 14px;
+    font-weight: 500;
+    text-transform: uppercase;
+    letter-spacing: 1.4px;
+    color: #B3B3C0; }
+  .widget__post-item .post-title {
+    font-size: 18px;
+    font-weight: 400;
+    color: var(--color-white);
+    line-height: 26px;
+    font-family: var(--font-body); }
+    .widget__post-item .post-title a {
+      color: inherit; }
+  .widget__social li:not(:last-child) {
+    margin-right: 10px; }
+  .widget__social li a {
+    width: 55px;
+    height: 55px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    color: var(--color-white);
+    background-color: #0B0B29;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 16px; }
+    .widget__social li a:hover {
+      background-color: var(--color-primary); }
+  .widget__divider {
+    width: 100%;
+    height: 1px;
+    background-color: #383855; }
+
+.blog-single__wrap {
+  background-color: #1D1D3E;
+  padding: 70px 125px;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  z-index: 2;
+  position: relative; }
+  @media (max-width: 991px) {
+    .blog-single__wrap {
+      padding: 50px 30px; } }
+  @media (max-width: 767px) {
+    .blog-single__wrap {
+      padding: 30px 20px; } }
+.blog-single__content img, .blog-single__thumb img {
+  mix-blend-mode: luminosity; }
+.blog-single__top {
+  max-width: 740px;
+  margin: 0 auto 50px; }
+  @media (max-width: 767px) {
+    .blog-single__top {
+      margin: 0; } }
+.blog-single__title {
+  font-size: 50px;
+  line-height: 62px;
+  margin-bottom: 35px; }
+  @media (max-width: 1199px) {
+    .blog-single__title {
+      font-size: 40px;
+      line-height: 54px; } }
+  @media (max-width: 767px) {
+    .blog-single__title {
+      font-size: 24px;
+      line-height: 38px; } }
+.blog-single__thumb {
+  display: inline-block;
+  text-align: center;
+  border-radius: 20px;
+  -webkit-border-radius: 20px;
+  -moz-border-radius: 20px;
+  -ms-border-radius: 20px;
+  -o-border-radius: 20px;
+  overflow: hidden;
+  margin-bottom: 70px; }
+  @media (max-width: 767px) {
+    .blog-single__thumb {
+      margin-bottom: 0; } }
+.blog-single__author .avatar {
+  margin-right: 20px;
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  overflow: hidden; }
+.blog-single__author h4 {
+  font-size: 16px;
+  letter-spacing: 0;
+  text-transform: capitalize; }
+.blog-single__content {
+  padding: 0 90px; }
+  @media (max-width: 1199px) {
+    .blog-single__content {
+      padding: 0 50px; } }
+  @media (max-width: 767px) {
+    .blog-single__content {
+      padding: 0 10px;
+      margin-top: 30px; } }
+  .blog-single__content h2 {
+    font-size: 36px;
+    margin-bottom: 43px; }
+    @media (max-width: 767px) {
+      .blog-single__content h2 {
+        font-size: 24px; } }
+  .blog-single__content p {
+    color: var(--color-white);
+    font-size: 18px;
+    line-height: 30px; }
+    .blog-single__content p:not(:last-child) {
+      margin-bottom: 50px; }
+.blog-single__images {
+  margin: 55px -90px; }
+  .blog-single__images img {
+    border-radius: 20px;
+    -webkit-border-radius: 20px;
+    -moz-border-radius: 20px;
+    -ms-border-radius: 20px;
+    -o-border-radius: 20px; }
+  @media (max-width: 1199px) {
+    .blog-single__images {
+      margin: 40px -50px; } }
+  @media (max-width: 767px) {
+    .blog-single__images {
+      margin: 30px -10px; } }
+
+blockquote {
+  max-width: 705px;
+  font-size: 24px;
+  color: #fff;
+  line-height: 34px;
+  margin: 0 auto; }
+  @media (max-width: 767px) {
+    blockquote {
+      font-size: 20px;
+      line-height: 31px; } }
+  blockquote .icon {
+    width: 54px;
+    height: 54px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    margin: 0 auto 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center; }
+  blockquote span {
+    font-size: 16px;
+    color: #B3B3C0;
+    display: block;
+    margin-top: 10px; }
+
+.post-footer {
+  padding: 0 90px; }
+  @media (max-width: 1199px) {
+    .post-footer {
+      padding: 0 50px; } }
+  @media (max-width: 767px) {
+    .post-footer {
+      padding: 0; } }
+
+.post-tags-share .tags ul li {
+  margin-top: 10px; }
+  .post-tags-share .tags ul li:not(:last-child) {
+    margin-right: 6px; }
+  .post-tags-share .tags ul li a {
+    font-size: 14px;
+    font-style: normal;
+    font-weight: 400;
+    letter-spacing: 0.7px;
+    border-radius: 3px;
+    background-color: #0B0B29;
+    display: inline-block;
+    padding: 8px 20px;
+    line-height: 1;
+    color: #92939E; }
+    .post-tags-share .tags ul li a:hover {
+      background-color: var(--color-primary);
+      color: var(--color-white); }
+.post-tags-share .social-share ul li {
+  margin-top: 10px; }
+  .post-tags-share .social-share ul li:not(:first-child) {
+    margin-left: 10px; }
+  .post-tags-share .social-share ul li a {
+    font-size: 11px;
+    background-color: #0B0B29;
+    width: 30px;
+    height: 30px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--color-white); }
+    .post-tags-share .social-share ul li a:hover {
+      background-color: var(--color-primary); }
+
+.post-author {
+  text-align: center;
+  border: 1px solid #333159;
+  padding: 60px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px; }
+  .post-author__avatar {
+    width: 80px;
+    height: 80px;
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    margin: 0 auto 30px;
+    overflow: hidden; }
+  .post-author h5 {
+    font-size: 20px;
+    margin-bottom: 11px; }
+  .post-author p {
+    max-width: 510px;
+    margin: 0 auto; }
+
+.post-related {
+  margin-bottom: 70px;
+  padding-bottom: 75px;
+  border-bottom: 1px solid rgba(2, 0, 20, 0.05); }
+  .post-related .title {
+    font-size: 36px;
+    margin-bottom: 40px; }
+    @media (max-width: 767px) {
+      .post-related .title {
+        font-size: 28px; } }
+  .post-related__item .thumb {
+    border-radius: 30px;
+    -webkit-border-radius: 30px;
+    -moz-border-radius: 30px;
+    -ms-border-radius: 30px;
+    -o-border-radius: 30px;
+    overflow: hidden;
+    margin-bottom: 30px; }
+  .post-related__item h3 {
+    font-size: 28px;
+    color: #020014;
+    margin-bottom: 20px; }
+    @media (max-width: 767px) {
+      .post-related__item h3 {
+        font-size: 22px; } }
+    .post-related__item h3 a {
+      color: inherit; }
+
+.post-nav {
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  margin: 0 -50px;
+  margin-top: 55px;
+  position: relative; }
+  @media (max-width: 767px) {
+    .post-nav {
+      margin: 0; } }
+  .post-nav__item {
+    width: 50%;
+    padding: 0 50px;
+    margin-top: 20px; }
+    @media (max-width: 991px) {
+      .post-nav__item {
+        width: 50%;
+        padding: 0; } }
+    @media (max-width: 767px) {
+      .post-nav__item {
+        width: 100%; } }
+    .post-nav__item h3 {
+      font-size: 18px;
+      color: var(--color-white);
+      line-height: 26px;
+      margin-bottom: 3px;
+      font-weight: 600;
+      max-width: 200px; }
+      .post-nav__item h3 a {
+        color: inherit; }
+    .post-nav__item span {
+      color: #B3B3C0;
+      text-transform: uppercase;
+      font-size: 12px;
+      font-weight: 400;
+      display: inline-block; }
+    .post-nav__item.post-left {
+      text-align: right; }
+      @media (max-width: 767px) {
+        .post-nav__item.post-left {
+          text-align: start; } }
+      .post-nav__item.post-left h3 {
+        float: right; }
+        @media (max-width: 767px) {
+          .post-nav__item.post-left h3 {
+            float: none; } }
+      .post-nav__item.post-left:hover .icon {
+        margin-left: -5px; }
+    .post-nav__item.post-right {
+      text-align: left; }
+      .post-nav__item.post-right .icon {
+        left: auto;
+        right: -12px; }
+      .post-nav__item.post-right:hover .icon {
+        margin-right: -5px; }
+    .post-nav__item .link {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%; }
+    .post-nav__item .icon {
+      position: absolute;
+      top: 50%;
+      left: -12px;
+      -webkit-transform: translateY(-50%);
+      -ms-transform: translateY(-50%);
+      transform: translateY(-50%);
+      font-size: 24px;
+      -webkit-transition: 0.3s;
+      -o-transition: 0.3s;
+      transition: 0.3s;
+      color: var(--color-white); }
+    .post-nav__item:hover h3 a {
+      background-size: 100% 100%; }
+  .post-nav__inner {
+    border-radius: 10px;
+    -webkit-border-radius: 10px;
+    -moz-border-radius: 10px;
+    -ms-border-radius: 10px;
+    -o-border-radius: 10px;
+    background-color: #0B0B29;
+    padding: 20px 40px; }
+    @media (max-width: 767px) {
+      .post-nav__inner {
+        padding: 20px 30px; } }
+  .post-nav .grid_icon {
+    position: absolute;
+    top: 56%;
+    left: 50%;
+    -webkit-transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    transform: translate(-50%, -50%); }
+    @media (max-width: 991px) {
+      .post-nav .grid_icon {
+        display: none; } }
+
+/* comment css */
+.post-comments {
+  padding-bottom: 55px; }
+  .post-comments .title {
+    font-size: 26px;
+    margin-bottom: 25;
+    font-weight: 500;
+    font-family: var(--font-body); }
+
+.latest__comments {
+  margin-top: -30px; }
+  .latest__comments .comments-box {
+    padding: 30px 0;
+    position: relative; }
+  .latest__comments .comments-text {
+    overflow: hidden; }
+  .latest__comments .comments-avatar {
+    border-radius: 50%;
+    float: left; }
+    @media (max-width: 767px) {
+      .latest__comments .comments-avatar {
+        float: none;
+        margin-bottom: 10px; } }
+    @media only screen and (min-width: 576px) and (max-width: 767px) {
+      .latest__comments .comments-avatar {
+        float: left;
+        margin-bottom: 0px; } }
+    .latest__comments .comments-avatar img {
+      border-radius: 50%;
+      width: 80px !important;
+      margin-right: 30px; }
+  .latest__comments li:last-child .comments-box {
+    padding-bottom: 0px; }
+  .latest__comments li.children {
+    margin-left: 100px; }
+    @media (max-width: 767px) {
+      .latest__comments li.children {
+        margin-left: 0px; } }
+    @media only screen and (min-width: 576px) and (max-width: 767px) {
+      .latest__comments li.children {
+        margin-left: 50px; } }
+    .latest__comments li.children .reply {
+      top: 30px; }
+      @media (max-width: 767px) {
+        .latest__comments li.children .reply {
+          top: 120px; } }
+  .latest__comments .avatar-name {
+    margin-bottom: 15px;
+    overflow: hidden;
+    position: relative; }
+    .latest__comments .avatar-name h5 {
+      font-size: 18px;
+      margin-bottom: 0px;
+      font-weight: 500;
+      font-family: var(--font-body); }
+    .latest__comments .avatar-name span {
+      font-size: 15px;
+      color: var(--color-default); }
+  .latest__comments .reply {
+    display: inline-block;
+    font-weight: 400;
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s;
+    line-height: 1;
+    position: absolute;
+    right: 0;
+    margin-top: 0;
+    top: 30px;
+    text-decoration: none;
+    font-size: 12px;
+    color: #92939E;
+    padding: 9px 20px;
+    background-color: #0B0B29;
+    border-radius: 15px;
+    -webkit-border-radius: 15px;
+    -moz-border-radius: 15px;
+    -ms-border-radius: 15px;
+    -o-border-radius: 15px; }
+    @media (max-width: 767px) {
+      .latest__comments .reply {
+        top: 90px; } }
+    .latest__comments .reply i {
+      margin-right: 5px; }
+    .latest__comments .reply:hover {
+      color: var(--color-white); }
+  .latest__comments--2 p {
+    font-size: 14px;
+    line-height: 24px;
+    color: var(--color-black); }
+
+.comments-form {
+  background: #0B0B29;
+  padding: 50px;
+  border-radius: 10px;
+  -webkit-border-radius: 10px;
+  -moz-border-radius: 10px;
+  -ms-border-radius: 10px;
+  -o-border-radius: 10px; }
+  @media (max-width: 767px) {
+    .comments-form {
+      padding: 30px 20px; } }
+  .comments-form .title {
+    font-size: 26px;
+    margin-bottom: 20px;
+    font-weight: 500;
+    font-family: var(--font-body); }
+  .comments-form p {
+    margin-bottom: 28px; }
+  .comments-form .form input, .comments-form .form textarea {
+    height: 55px;
+    margin-bottom: 20px;
+    padding: 0 20px;
+    width: 100%;
+    font-size: 16px;
+    color: var(--color-black);
+    border-radius: 5px;
+    background-color: #1D1D3E;
+    border: 2px solid transparent;
+    font-weight: 400; }
+    .comments-form .form input::-webkit-input-placeholder, .comments-form .form textarea::-webkit-input-placeholder {
+      color: #B3B3C0;
+      opacity: 1; }
+    .comments-form .form input::-moz-placeholder, .comments-form .form textarea::-moz-placeholder {
+      color: #B3B3C0;
+      opacity: 1; }
+    .comments-form .form input:-ms-input-placeholder, .comments-form .form textarea:-ms-input-placeholder {
+      color: #B3B3C0;
+      opacity: 1; }
+    .comments-form .form input:-moz-placeholder, .comments-form .form textarea:-moz-placeholder {
+      color: #B3B3C0;
+      opacity: 1; }
+    .comments-form .form input:focus, .comments-form .form textarea:focus {
+      border-color: var(--color-primary); }
+  .comments-form .form textarea {
+    padding: 20px 30px;
+    height: 150px; }
+  .comments-form__btn button {
+    padding: 18px 35px; }
+
+/*----------------------------------------*/
