--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6115,3 +6115,85 @@ blockquote {
     padding: 18px 35px; }
 
 /*----------------------------------------*/
+/*  14. user option
+/*----------------------------------------*/
+@media (max-width: 1199px) {
+  .user-option .sec-title {
+    margin-bottom: 60px; } }
+.user-option__item {
+  background-image: url(../img/bg/ui_bg1.svg);
+  background-position: center 17px;
+  background-repeat: no-repeat;
+  margin-right: -90px;
+  background-position-x: -39px;
+  padding: 50px;
+  padding-right: 45px;
+  position: relative; }
+  @media (max-width: 1199px) {
+    .user-option__item {
+      background: #0b0e13;
+      padding-top: 0; } }
+  @media (max-width: 991px) {
+    .user-option__item {
+      margin-right: 0; } }
+  .user-option__item::before {
+    position: absolute;
+    top: 46px;
+    left: 2px;
+    width: 54px;
+    height: 64px;
+    content: "";
+    background-color: #fff;
+    clip-path: polygon(0 0, 0 100%, 100% 0);
+    -webkit-transition: 0.3s;
+    -o-transition: 0.3s;
+    transition: 0.3s; }
+    @media (max-width: 1199px) {
+      .user-option__item::before {
+        display: none; } }
+  .user-option__item .icon {
+    bottom: -22px;
+    left: -38px; }
+  .user-option__item .heading {
+    font-weight: 600;
+    letter-spacing: -0.96px; }
+  .user-option__item.style2 {
+    margin-right: 0;
+    margin-left: -90px;
+    background-image: url(../img/bg/ui_bg2.svg); }
+    @media (max-width: 1199px) {
+      .user-option__item.style2 {
+        background: #0b0e13; } }
+    @media (max-width: 991px) {
+      .user-option__item.style2 {
+        margin-left: 0; } }
+    .user-option__item.style2::before {
+      left: auto;
+      right: 4px;
+      top: auto;
+      bottom: 2px;
+      clip-path: polygon(100% 0, 0 100%, 100% 100%); }
+.user-option__list li {
+  padding-left: 28px;
+  position: relative; }
+  .user-option__list li span {
+    position: absolute;
+    top: 0;
+    left: 0; }
+  .user-option__list li h4 {
+    font-weight: 600;
+    margin-bottom: 8px;
+    letter-spacing: -0.54px; }
+  .user-option__list li p {
+    line-height: 24px; }
+  .user-option__list li:not(:last-child) {
+    margin-bottom: 20px; }
+.user-option__img {
+  z-index: -1;
+  position: relative;
+  margin-top: 36px; }
+  @media (max-width: 991px) {
+    .user-option__img {
+      margin-top: 0; } }
+
+/*----------------------------------------*/
